objects/TW1_Calendario_de_propriedades__c.object
<CustomObject>
    <description>Objeto que deve registrar o calendário de locação das propriedades.</description>
    <fields>
        <fullName>TW1_Data_de_fim__c</fullName>
        <label>Data de fim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_inicio__c</fullName>
        <label>Data de início</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Opportunidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunidade</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Calendário de propriedades</relationshipLabel>
        <relationshipName>Calendario_de_propriedades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Propriedade__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Propriedade</label>
        <referenceTo>TW1_Propriedade__c</referenceTo>
        <relationshipLabel>Calendário de propriedades</relationshipLabel>
        <relationshipName>Calendario_de_propriedades</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_ShoppingId__c</fullName>
        <formula>TW1_Propriedade__r.TW1_Shopping__c</formula>
        <label>ShoppingId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ocupada</fullName>
                </value>
                <value>
                    <fullName>Reservada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <label>Calendário de propriedade</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendário de propriedades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>